Sooooooo close.
Something going on with cancellation looks like it's the cause of the
only remaining failures (commented out).